<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#FFFFFF"
    android:clickable="true"
    android:fadeScrollbars="false"
    android:focusable="true">

    <Button
        android:id="@+id/test_cooper"
        android:layout_width="222dp"
        android:layout_height="93dp"
        android:text="@string/action_test_cooper"
        app:layout_constraintBottom_toTopOf="@+id/pushups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tests"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/test_flexiones"
        android:layout_width="222dp"
        android:layout_height="93dp"
        android:text="@string/action_frecuencias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pushups"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tests" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="250dp"
        android:layout_height="214dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/tests"
        android:layout_width="125dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image_tests"
        app:layout_constraintBottom_toTopOf="@+id/test_flexiones"
        app:layout_constraintEnd_toStartOf="@+id/test_cooper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/tests" />

    <ImageView
        android:id="@+id/pushups"
        android:layout_width="125dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image_tests"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/test_flexiones"
        app:layout_constraintTop_toBottomOf="@+id/test_cooper"
        app:srcCompat="@drawable/pushups" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/action_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>